...
    <string name="schedule_edit_title">ویرایش برنامه دارو</string>
    <string name="original_zone_value">منطقه زمانی نسخه فعلی: %1$s</string>
    <string name="save_changes">ذخیره تغییرات</string>
    <string name="cancel">انصراف</string>

    <string name="report_not_recorded">ثبت نشده</string>
    <string name="report_given">مراقب: داده شد</string>

    <string name="detail_title">جزئیات نوبت</string>
    <string name="scheduled_time">زمان برنامه‌ریزی‌شده</string>
    <string name="instruction">دستور</string>
    <string name="record_given">مراقب: داده شد</string>
    <string name="record_not_given">مراقب: داده نشد</string>
...
